<resources>
    <string name="app_name">Fantasy Fitness</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="create_account">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="Username">Username</string>
    <string name="start_workout">Start Workout</string>
    <string name="pause_workout">Pause Workout</string>
    <string name="resume_workout">Resume Workout</string>
    <string name="stop_workout">Stop Workout</string>
    <string name="complete_workout">Complete Workout</string>
    <string name="map_descriptor">Game Map</string>
    <string name="close">Close</string>
    <string name="travel">Travel</string>
    <string name="workout_records">Workout Records</string>
    <string name="settings">Settings</string>
    <string name="dismiss">Dismiss</string>
    <string name="leave">Leave</string>
    <string name="end_turn">End Turn</string>
    <string name="ready">Ready</string>
    <string name="enemy_turn">Enemy Turn</string>
    <string name="quests">Quests</string>
    <string name="objective">objective</string>
    <string name="blacksmith">Blacksmith</string>
    <string name="inn">Inn</string>
    <string name="general_store">General Store</string>
    <string name="bridgeton_general_store">bridgetonGeneralStore</string>
    <string name="faolyn_general_store">faolynGeneralStore</string>
    <string name="thanadel_general_store">thanadelGeneralStore</string>
    <string name="arduwyn_general_store">arduwynGeneralStore</string>
    <string name="faolyn_blacksmith">faolynBlacksmith</string>
    <string name="bridgeton_blacksmith">bridgetonBlacksmith</string>
    <string name="arduwyn_blacksmith">arduwynBlacksmith</string>
    <string name="dwarven_tents">dwarvenTents</string>
    <string name="tower">tower</string>
</resources>