<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fantasy_fitness_gray"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp" />
    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/fantasy_fitness_white"
        android:textSize="50sp"
        android:layout_gravity="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="150dp" />
    <Button
        android:id="@+id/login_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:backgroundTint="@color/fantasy_fitness_green"
        android:textColor="@color/fantasy_fitness_white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <Button
        android:id="@+id/create_account_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:backgroundTint="@color/fantasy_fitness_green"
        android:textColor="@color/fantasy_fitness_white"/>

</LinearLayout>