...
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/quests_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/fantasy_fitness_gray"
        android:contentDescription="@string/quests"
...
